--- a/UBCF.ipynb
+++ b/UBCF.ipynb
@@ -75,10 +75,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def score_user_item_ubcf(item_id, neighbours_df, neighbour_user_similarity, active_user_mean_rating):\n",
-    "    item_rating = neighbours_df[item_id]\n",
+    "def score_user_item_ubcf(item_id, neighbours_df, active_user_mean_rating):\n",
     "    t1, t2, score = 0, 0, 0\n",
-    "    for similarity, norm_rating in zip(neighbour_user_similarity, item_rating):\n",
+    "    for similarity, norm_rating in zip(neighbours_df[\"similarity\"], neighbours_df[item_id]):\n",
     "        t1+= norm_rating * similarity # numeratore\n",
     "        t2+= similarity # denominatore\n",
     "    if t2 !=0:\n",
@@ -95,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +112,9 @@
     "    # si calcola la similarità tra l'utente target e tutti gli altri utenti\n",
     "    similarity = []\n",
     "    for i in range(normalized_ratings_df.shape[0]):\n",
-    "          similarity.append([normalized_ratings_df.iloc[i, 0], pearson_correlation_coefficient(active_user_rating_list, normalized_ratings_df.iloc[i, 2:])])\n",
+    "          similarity.append([normalized_ratings_df.iloc[i, 0], \\\n",
+    "                             pearson_correlation_coefficient(active_user_rating_list, \\\n",
+    "                                                             normalized_ratings_df.iloc[i, 2:])])\n",
     "    # si crea un dataframe\n",
     "    similarity = pd.DataFrame(similarity, columns = ['user_id', 'similarity'])\n",
     "    # si buttano i vicini che sono troppo poco simili\n",
@@ -140,14 +141,13 @@
     "    final = []\n",
     "    # per ogni barzellette che si potrebbe raccomandare si calcola lo score\n",
     "    for column in recommendation_columns:\n",
-    "        # si devono prendere i 30 vicini più simili che hanno valutato la barzelletta che si vuole raccomandare\n",
     "        app = neighbours_df[neighbours_df[column].notna()][[\"user_id\", column]]\n",
     "        # si fa un join con la matrice di similarità sulla base dello user_id\n",
     "        app = pd.merge(app, similarity, on = \"user_id\")\n",
-    "        # si ordina in ordine decrescente per la similarità e si prendono i primi 30 elementi\n",
+    "        # si ordina in ordine decrescente per la similarità e si prendono i primi 100 elementi\n",
     "        app = app.sort_values(by=['similarity'], ascending=False).head(100)\n",
     "        # si predice la valutazione dell'utente in base ai suoi vicini\n",
-    "        score = score_user_item_ubcf(column, app, app[\"similarity\"], active_user_mean_rating)\n",
+    "        score = score_user_item_ubcf(column, app, active_user_mean_rating)\n",
     "        if score > top_score:\n",
     "            top_score = score\n",
     "            joke_to_suggest = column\n",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -314,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
